--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = py26,py27,pypy,py32,py33,docs,pep8
 
 [testenv]
 deps = pytest-cov
-commands = py.test --cov=cryptography/
+commands = py.test --cov=cryptography/ --cov=tests/
 
 [testenv:docs]
 deps = sphinx
@@ -13,4 +13,5 @@ commands = sphinx-build -W -b html -d {envtmpdir}/doctrees . _build/html
 
 [testenv:pep8]
 deps = flake8
-commands = flake8 cryptography/ tests/ docs/
+# E128 continuation line under-indented for visual indent
+commands = flake8 --ignore="E128" cryptography/ tests/ docs/
