--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,9 @@
 envlist = py26,py27,pypy,py32,py33,docs,pep8
 
 [testenv]
-deps = pytest-cov pretend
+deps =
+    pytest-cov
+    pretend
 commands = py.test --cov=cryptography/ --cov=tests/
 
 [testenv:docs]
