Use the Sphinx doctest builder
This allows us to test our documentation snippets using the standard
"doctest" utility.

--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,9 @@ commands = py.test --cov=cryptography/ --cov=tests/
 [testenv:docs]
 deps = sphinx
 basepython = python2.7
-changedir = docs
-commands = sphinx-build -W -b html -d {envtmpdir}/doctrees . _build/html
+commands =
+    sphinx-build -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
+    sphinx-build -W -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
 
 [testenv:pep8]
 deps = flake8
