--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist = py26,py27,pypy,py32,py33,docs,pep8
 deps =
     pytest-cov
     pretend
+    six
 commands = py.test --cov=cryptography/ --cov=tests/
 
 [testenv:docs]
