--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,16 @@ env:
     - TOX_ENV=py27
     - TOX_ENV=py32
     - TOX_ENV=py33
+    - TOX_ENV=pypy
     - TOX_ENV=docs
     - TOX_ENV=pep8
 
 install:
+    - "[[ ${TOX_ENV} == pypy ]] && sudo add-apt-repository -y ppa:pypy/ppa || true"
+    - "[[ ${TOX_ENV} == pypy ]] && sudo apt-get -y update && sudo apt-get -y install pypy || true"
+    # This is required because we need to get rid of the Travis installed PyPy
+    # or it'll take precedence over the PPA installed one.
+    - "[[ ${TOX_ENV} == pypy ]] && sudo rm -rf /usr/local/pypy/bin || true"
     - pip install tox coveralls
 
 script:
