A tox thing which attempts to check for errors (should be failing now)

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,19 @@
 [tox]
-envlist = py26,py27,pypy,py32,py33,docs,pep8
+envlist = cffi,py26,py27,pypy,py32,py33,docs,pep8
 
 [testenv]
 deps =
     pytest-cov
     pretend
 commands = py.test --cov=cryptography/ --cov=tests/
+
+[testenv:cffi]
+basepython = python2.7
+install_command =
+setenv =
+    CFLAGS="-Wall -Wconversion -Wpedantic -Werror"
+commands =
+    python -c "import cryptography.bindings.openssl"
 
 [testenv:docs]
 deps = sphinx
