--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ commands = py.test --cov=cryptography/ --cov=tests/
 [testenv:cffi]
 basepython = python2.7
 setenv =
-    CFLAGS="-Wall -Wconversion -Werror"
+    CFLAGS=-Wall -Wconversion -Wpedantic -Werror
 commands =
     python -c "import cryptography.bindings.openssl"
 
