We can't compile cffi itself with warnings

--- a/tox.ini
+++ b/tox.ini
@@ -9,10 +9,9 @@ commands = py.test --cov=cryptography/ --cov=tests/
 
 [testenv:cffi]
 basepython = python2.7
-setenv =
-    CFLAGS=-Wall -Wconversion -Werror
 commands =
-    python -c "import cryptography.bindings.openssl"
+    git clean -x -f -d
+    CFLAGS="-Wall -Wconversion -Werror" python -c "import cryptography.bindings.openssl"
 
 [testenv:docs]
 deps = sphinx
