--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,11 @@
 [tox]
-envlist = cffi,py26,py27,pypy,py32,py33,docs,pep8
+envlist = py26,py27,pypy,py32,py33,docs,pep8
 
 [testenv]
 deps =
     pytest-cov
     pretend
 commands = py.test --cov=cryptography/ --cov=tests/
-
-[testenv:cffi]
-basepython = python2.7
-commands =
-    git clean -x -f -d
-    CFLAGS="-Wall -Wconversion -Werror" python -c "import cryptography.bindings.openssl"
 
 [testenv:docs]
 deps = sphinx
