Run coverage from the outside so it sees everything

--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,12 @@ envlist = py26,py27,pypy,py32,py33,docs,pep8
 
 [testenv]
 deps =
-    pytest-cov
+    pytest
+    coverage
     pretend
-commands = py.test --cov=cryptography/ --cov=tests/
+commands =
+    coverage run --source=cryptography/,tests/ -m pytest
+    coverage report
 
 [testenv:docs]
 deps = sphinx
