--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
 
 install:
     - "[[ ${TOX_ENV} == pypy ]] && sudo add-apt-repository -y ppa:pypy/ppa || true"
-    - "[[ ${TOX_ENV} == pypy ]] && sudo apt-get -y update || true && sudo apt-get -y install pypy || true"
+    - "[[ ${TOX_ENV} == pypy ]] && (sudo apt-get -y update || true) && sudo apt-get -y install pypy || true"
     # This is required because we need to get rid of the Travis installed PyPy
     # or it'll take precedence over the PPA installed one.
     - "[[ ${TOX_ENV} == pypy ]] && sudo rm -rf /usr/local/pypy/bin || true"
