--- a/tox.ini
+++ b/tox.ini
@@ -20,4 +20,4 @@ commands =
 [testenv:pep8]
 deps = flake8
 # E128 continuation line under-indented for visual indent
-commands = flake8 --ignore="E128" cryptography/ tests/ docs/
+commands = flake8 --ignore="E128" cryptography/ tests/ docs/ setup.py
