--- a/tox.ini
+++ b/tox.ini
@@ -20,4 +20,7 @@ commands =
 [testenv:pep8]
 deps = flake8
 # E128 continuation line under-indented for visual indent
-commands = flake8 --ignore="E128" cryptography/ tests/ docs/ setup.py
+commands = flake8 --ignore="E128" .
+
+[flake8]
+exclude = .tox
