--- a/tox.ini
+++ b/tox.ini
@@ -19,8 +19,7 @@ commands =
 
 [testenv:pep8]
 deps = flake8
-# E128 continuation line under-indented for visual indent
-commands = flake8 --ignore="E128" .
+commands = flake8 .
 
 [flake8]
 exclude = .tox,*.egg
