--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ basepython = python2.7
 commands =
     sphinx-build -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
     sphinx-build -W -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
+    sphinx-build -W -b linkcheck docs docs/_build/html
 
 [testenv:pep8]
 deps = flake8
