--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,10 @@ envlist = py26,py27,pypy,py32,py33,docs,pep8
 
 [testenv]
 deps =
-    pytest
     coverage
+    iso8601
     pretend
+    pytest
 commands =
     coverage run --source=cryptography/,tests/ -m pytest
     coverage report -m --fail-under 100
