Disable coverage on pypy temporarily.

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,11 @@ commands =
     sphinx-build -W -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
     sphinx-build -W -b linkcheck docs docs/_build/html
 
+# Temporarily disable coverage on pypy because of performance problems with
+# coverage.py on pypy.
+[testenv:pypy]
+commands = py.test
+
 [testenv:pep8]
 deps = flake8
 commands = flake8 .
