--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,23 @@ env:
     - TOX_ENV=py32 CC=clang
     - TOX_ENV=py33 CC=clang
     - TOX_ENV=pypy CC=clang
+    - TOX_ENV=py26 OPENSSL=0.9.8
+    - TOX_ENV=py27 OPENSSL=0.9.8
+    - TOX_ENV=py32 OPENSSL=0.9.8
+    - TOX_ENV=py33 OPENSSL=0.9.8
+    - TOX_ENV=pypy OPENSSL=0.9.8
+    - TOX_ENV=py26 CC=clang OPENSSL=0.9.8
+    - TOX_ENV=py27 CC=clang OPENSSL=0.9.8
+    - TOX_ENV=py32 CC=clang OPENSSL=0.9.8
+    - TOX_ENV=py33 CC=clang OPENSSL=0.9.8
+    - TOX_ENV=pypy CC=clang OPENSSL=0.9.8
     - TOX_ENV=docs
     - TOX_ENV=pep8
     - TOX_ENV=py3pep8
 
 install:
+    - "[[ ${OPENSSL} == \"0.9.8\" ]] && sudo add-apt-repository \"deb http://archive.ubuntu.com/ubuntu lucid main\" || true"
+    - "[[ ${OPENSSL} == \"0.9.8\" ]] && sudo apt-get -y update && sudo apt-get -y install libssl-dev/lucid || true"
     - "[[ ${TOX_ENV} == pypy ]] && sudo add-apt-repository -y ppa:pypy/ppa || true"
     - "[[ ${TOX_ENV} == pypy ]] && sudo apt-get -y update && sudo apt-get -y install pypy || true"
     # This is required because we need to get rid of the Travis installed PyPy
