--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ env:
 
 install:
     - "[[ ${OPENSSL} == \"0.9.8\" ]] && sudo add-apt-repository \"deb http://archive.ubuntu.com/ubuntu lucid main\" || true"
-    - "[[ ${OPENSSL} == \"0.9.8\" ]] && sudo apt-get -y update && sudo apt-get -y install libssl-dev/lucid || true"
+    - "[[ ${OPENSSL} == \"0.9.8\" ]] && sudo apt-get -y update && sudo apt-get -y --force-yes install libssl-dev/lucid || true"
     - "[[ ${TOX_ENV} == pypy ]] && sudo add-apt-repository -y ppa:pypy/ppa || true"
     - "[[ ${TOX_ENV} == pypy ]] && sudo apt-get -y update && sudo apt-get -y install pypy || true"
     # This is required because we need to get rid of the Travis installed PyPy
@@ -36,6 +36,7 @@ install:
     - pip install tox
 
 script:
+    - "[[ ${OPENSSL} != "" ]] && openssl version | grep ${OPENSSL}"
     - tox -e $TOX_ENV
 
 notifications:
