--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,9 @@ install:
     - pip install tox
 
 script:
-    - "[[ ${OPENSSL} != "" ]] && openssl version | grep ${OPENSSL}"
+    # Make sure that if we installed an OPENSSL version then we got that
+    # version installed.
+    - "[[ ${OPENSSL} != \"\" ]] && openssl version | grep ${OPENSSL}"
     - tox -e $TOX_ENV
 
 notifications:
