--- a/.travis.yml
+++ b/.travis.yml
@@ -27,22 +27,23 @@ env:
 
 matrix:
     allow_failures:
-        - TOX_ENV=py26 OPENSSL=0.9.8
-        - TOX_ENV=py27 OPENSSL=0.9.8
-        - TOX_ENV=py32 OPENSSL=0.9.8
-        - TOX_ENV=py33 OPENSSL=0.9.8
-        - TOX_ENV=pypy OPENSSL=0.9.8
-        - TOX_ENV=py26 CC=clang OPENSSL=0.9.8
-        - TOX_ENV=py27 CC=clang OPENSSL=0.9.8
-        - TOX_ENV=py32 CC=clang OPENSSL=0.9.8
-        - TOX_ENV=py33 CC=clang OPENSSL=0.9.8
-        - TOX_ENV=pypy CC=clang OPENSSL=0.9.8
+        - env: TOX_ENV=py26 OPENSSL=0.9.8
+        - env: TOX_ENV=py27 OPENSSL=0.9.8
+        - env: TOX_ENV=py32 OPENSSL=0.9.8
+        - env: TOX_ENV=py33 OPENSSL=0.9.8
+        - env: TOX_ENV=pypy OPENSSL=0.9.8
+        - env: TOX_ENV=py26 CC=clang OPENSSL=0.9.8
+        - env: TOX_ENV=py27 CC=clang OPENSSL=0.9.8
+        - env: TOX_ENV=py32 CC=clang OPENSSL=0.9.8
+        - env: TOX_ENV=py33 CC=clang OPENSSL=0.9.8
+        - env: TOX_ENV=pypy CC=clang OPENSSL=0.9.8
 
 install:
-    - "[[ ${OPENSSL} == \"0.9.8\" ]] && sudo add-apt-repository \"deb http://archive.ubuntu.com/ubuntu lucid main\" || true"
-    - "[[ ${OPENSSL} == \"0.9.8\" ]] && sudo apt-get -y update && sudo apt-get -y --force-yes install libssl-dev/lucid || true"
-    - "[[ ${TOX_ENV} == pypy ]] && sudo add-apt-repository -y ppa:pypy/ppa || true"
-    - "[[ ${TOX_ENV} == pypy ]] && sudo apt-get -y update && sudo apt-get -y install pypy || true"
+    - "sudo add-apt-repository \"deb http://archive.ubuntu.com/ubuntu/ lucid main\""
+    - sudo add-apt-repository -y ppa:pypy/ppa
+    - sudo apt-get -y update || true
+    - "[[ ${OPENSSL} == \"0.9.8\" ]] && sudo apt-get -y --force-yes install libssl-dev/lucid || true"
+    - "[[ ${TOX_ENV} == pypy ]] && sudo apt-get -y install pypy || true"
     # This is required because we need to get rid of the Travis installed PyPy
     # or it'll take precedence over the PPA installed one.
     - "[[ ${TOX_ENV} == pypy ]] && sudo rm -rf /usr/local/pypy/bin || true"
