--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
     pretend
 commands =
     coverage run --source=cryptography/,tests/ -m pytest
-    coverage report -m --fail-under 100
+    coverage report -m
 
 [testenv:docs]
 deps = sphinx
