--- a/.travis.yml
+++ b/.travis.yml
@@ -28,12 +28,12 @@ env:
 install:
     - "sudo add-apt-repository \"deb http://archive.ubuntu.com/ubuntu/ lucid main\""
     - sudo add-apt-repository -y ppa:pypy/ppa
-    - sudo apt-get -y update || true
-    - "[[ ${OPENSSL} == \"0.9.8\" ]] && sudo apt-get -y --force-yes install libssl-dev/lucid || true"
-    - "[[ ${TOX_ENV} == pypy ]] && sudo apt-get -y install pypy || true"
+    - sudo apt-get -y update
+    - "[[ ${OPENSSL} == \"0.9.8\" ]] && sudo apt-get -y --force-yes install libssl-dev/lucid"
+    - "[[ ${TOX_ENV} == pypy ]] && sudo apt-get -y install pypy"
     # This is required because we need to get rid of the Travis installed PyPy
     # or it'll take precedence over the PPA installed one.
-    - "[[ ${TOX_ENV} == pypy ]] && sudo rm -rf /usr/local/pypy/bin || true"
+    - "[[ ${TOX_ENV} == pypy ]] && sudo rm -rf /usr/local/pypy/bin"
     - pip install tox coveralls
 
 script:
