--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,9 @@ commands =
     coverage report -m
 
 [testenv:docs]
-deps = sphinx
+deps =
+    sphinx
+    sphinx_rtd_theme
 basepython = python2.7
 commands =
     sphinx-build -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
