Run pytest in --strict mode so that typso in pytest.mark give errors

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ deps =
     coverage
     pretend
 commands =
-    coverage run --source=cryptography/,tests/ -m pytest
+    coverage run --source=cryptography/,tests/ -m pytest --strict
     coverage report -m
 
 [testenv:docs]
