--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,4 @@ markers =
     hmac: this test requires a backend providing HMACBackend
     cipher: this test requires a backend providing CipherBackend
     hash: this test requires a backend providing HashBackend
+    supported: parametrized test requiring only_if and skip_message
