THis should be a seperate PR

--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ commands =
 # Temporarily disable coverage on pypy because of performance problems with
 # coverage.py on pypy.
 [testenv:pypy]
-commands = py.test --capture=no --strict
+commands = py.test --capture=no
 
 [testenv:pep8]
 deps = flake8
