add commoncrypto mark to skip on non-OS X platforms

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,3 +5,4 @@ markers =
     cipher: this test requires a backend providing CipherBackend
     hash: this test requires a backend providing HashBackend
     supported: parametrized test requiring only_if and skip_message
+    binding_available: verifies a given binding is available
