support osx and linux on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,21 @@
-language: python
-python: 2.7
+language: c
+os:
+    - linux
+    - osx
+compiler:
+    - clang
+    - gcc
 env:
     - TOX_ENV=py26
     - TOX_ENV=py27
     - TOX_ENV=py32
     - TOX_ENV=py33
     - TOX_ENV=pypy
-    - TOX_ENV=py26 CC=clang
-    - TOX_ENV=py27 CC=clang
-    - TOX_ENV=py32 CC=clang
-    - TOX_ENV=py33 CC=clang
-    - TOX_ENV=pypy CC=clang
     - TOX_ENV=py26 OPENSSL=0.9.8
     - TOX_ENV=py27 OPENSSL=0.9.8
     - TOX_ENV=py32 OPENSSL=0.9.8
     - TOX_ENV=py33 OPENSSL=0.9.8
     - TOX_ENV=pypy OPENSSL=0.9.8
-    - TOX_ENV=py26 CC=clang OPENSSL=0.9.8
-    - TOX_ENV=py27 CC=clang OPENSSL=0.9.8
-    - TOX_ENV=py32 CC=clang OPENSSL=0.9.8
-    - TOX_ENV=py33 CC=clang OPENSSL=0.9.8
-    - TOX_ENV=pypy CC=clang OPENSSL=0.9.8
     - TOX_ENV=docs
     - TOX_ENV=pep8
     - TOX_ENV=py3pep8
@@ -29,7 +24,7 @@ install:
     - ./.travis/install.sh
 
 script:
-    - tox -e $TOX_ENV
+    - if [[ "$(uname -s)" == "Darwin" ]]; then eval "$(pyenv init -)";fi && source ~/.venv/bin/activate && tox -e $TOX_ENV
 
 after_success:
     - coveralls
@@ -40,3 +35,78 @@ notifications:
             - "irc.freenode.org#cryptography-dev"
         use_notice: true
         skip_join: true
+
+matrix:
+    exclude:
+        - os: osx
+          env: TOX_ENV=py26
+          compiler: gcc
+        - os: osx
+          env: TOX_ENV=py27
+          compiler: gcc
+        - os: osx
+          env: TOX_ENV=py32
+          compiler: gcc
+        - os: osx
+          env: TOX_ENV=py33
+          compiler: gcc
+        - os: osx
+          env: TOX_ENV=pypy
+          compiler: gcc
+        - os: osx
+          env: TOX_ENV=py26
+          compiler: clang
+        - os: osx
+          env: TOX_ENV=py27
+          compiler: clang
+        - os: osx
+          env: TOX_ENV=py32
+          compiler: clang
+        - os: osx
+          env: TOX_ENV=py33
+          compiler: clang
+        - os: osx
+          env: TOX_ENV=pypy
+          compiler: clang
+        - os: osx
+          env: TOX_ENV=py26 OPENSSL=0.9.8
+          compiler: gcc
+        - os: osx
+          env: TOX_ENV=py27 OPENSSL=0.9.8
+          compiler: gcc
+        - os: osx
+          env: TOX_ENV=py32 OPENSSL=0.9.8
+          compiler: gcc
+        - os: osx
+          env: TOX_ENV=py33 OPENSSL=0.9.8
+          compiler: gcc
+        - os: osx
+          env: TOX_ENV=pypy OPENSSL=0.9.8
+          compiler: gcc
+        - os: osx
+          env: TOX_ENV=docs
+          compiler: gcc
+        - os: osx
+          env: TOX_ENV=pep8
+          compiler: gcc
+        - os: osx
+          env: TOX_ENV=py3pep8
+          compiler: gcc
+        - os: osx
+          env: TOX_ENV=docs
+          compiler: clang
+        - os: osx
+          env: TOX_ENV=pep8
+          compiler: clang
+        - os: osx
+          env: TOX_ENV=py3pep8
+          compiler: clang
+        - os: linux
+          env: TOX_ENV=docs
+          compiler: clang
+        - os: linux
+          env: TOX_ENV=pep8
+          compiler: clang
+        - os: linux
+          env: TOX_ENV=py3pep8
+          compiler: clang
