add brewed openssl to travis osx

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ install:
     - ./.travis/install.sh
 
 script:
-    - if [[ "$(uname -s)" == "Darwin" ]]; then eval "$(pyenv init -)"; fi && source ~/.venv/bin/activate && tox -e $TOX_ENV
+    - if [[ "$(uname -s)" == "Darwin" ]]; then export ARCHFLAGS="-arch x86_64" && export LDFLAGS="-L/usr/local/opt/openssl/lib" && export CFLAGS="-I/usr/local/opt/openssl/include" && eval "$(pyenv init -)"; fi && source ~/.venv/bin/activate && tox -e $TOX_ENV
 
 after_success:
     - coveralls
@@ -63,21 +63,6 @@ matrix:
         - os: osx
           env: TOX_ENV=pypy
           compiler: gcc
-        - os: osx
-          env: TOX_ENV=py26
-          compiler: clang
-        - os: osx
-          env: TOX_ENV=py27
-          compiler: clang
-        - os: osx
-          env: TOX_ENV=py32
-          compiler: clang
-        - os: osx
-          env: TOX_ENV=py33
-          compiler: clang
-        - os: osx
-          env: TOX_ENV=pypy
-          compiler: clang
         - os: osx
           env: TOX_ENV=py26 OPENSSL=0.9.8
           compiler: gcc
