--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,7 @@ commands =
     sphinx-build -W -b latex -d {envtmpdir}/doctrees docs docs/_build/latex
     sphinx-build -W -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
     sphinx-build -W -b linkcheck docs docs/_build/html
+    sphinx-build -W -b spelling docs docs/_build/html
 
 # Temporarily disable coverage on pypy because of performance problems with
 # coverage.py on pypy.
