--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ commands =
 [testenv:docs]
 deps =
     sphinx
+    sphinxcontrib-spelling
     sphinx_rtd_theme
 basepython = python2.7
 commands =
