okay this time really finish the rename. Up example iterations to 100k

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,5 +4,5 @@ markers =
     cipher: this test requires a backend providing CipherBackend
     hash: this test requires a backend providing HashBackend
     hmac: this test requires a backend providing HMACBackend
-    pbkdf2: this test requires a backend providing PBKDF2Backend
+    pbkdf2hmac: this test requires a backend providing PBKDF2HMACBackend
     supported: parametrized test requiring only_if and skip_message
