Minor changes for python3 compat and documentation changes

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,3 +7,4 @@ markers =
     pbkdf2hmac: this test requires a backend providing PBKDF2HMACBackend
     rsa: this test requires a backend providing RSABackend
     supported: parametrized test requiring only_if and skip_message
+    oath: this test requires a backend providing HMACBackend
