--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
-include LICENSE
 include AUTHORS.rst
+include CHANGELOG.rst
 include CONTRIBUTING.rst
+include LICENSE
 include README.rst
 
 recursive-include tests *.py
