--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,9 @@ include CONTRIBUTING.rst
 include LICENSE
 include README.rst
 
+recursive-include docs *
+prune docs/_build
+prune docs/_static
 recursive-include tests *.py
 recursive-include tests/vectors *
 recursive-include tests/hazmat/primitives/vectors *
