Ignore build/ folder and _cffi__*'s
Former can come from python setup.py bdist_wheel
Latter can come from python setup.py develop

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-*.py[co]
 __pycache__/
 _build/
-.tox/
-.cache/
-*.egg-info/
-.coverage
-*.egg
+build/
 dist/
 htmlcov/
+cryptography/_cffi__*
+.tox/
+.cache/
+.coverage
+*.egg-info/
+*.egg
+*.py[co]
