--- a/tox.ini
+++ b/tox.ini
@@ -24,6 +24,13 @@ commands =
     sphinx-build -W -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
     sphinx-build -W -b spelling docs docs/_build/html
 
+[testenv:docs-linkcheck]
+deps =
+    sphinx
+basepython = python2.7
+commands =
+    sphinx-build -W -b linkcheck docs docs/_build/html
+
 # Temporarily disable coverage on pypy because of performance problems with
 # coverage.py on pypy.
 [testenv:pypy]
