--- a/tox.ini
+++ b/tox.ini
@@ -37,12 +37,16 @@ commands =
 commands = py.test --capture=no --strict {posargs}
 
 [testenv:pep8]
-deps = flake8
+deps =
+    flake8
+    pep8-naming
 commands = flake8 .
 
 [testenv:py3pep8]
 basepython = python3.3
-deps = flake8
+deps =
+    flake8
+    pep8-naming
 commands = flake8 .
 
 [flake8]
