Fix bug in release task and style fixes
tasks.py was building tarballs/sdists that didn't actually have vectors
in because of setup.pys reliance on the cwd.

--- a/tox.ini
+++ b/tox.ini
@@ -7,8 +7,8 @@ deps =
     iso8601
     pretend
     pytest
+    ./vectors
 commands =
-    pip install -e vectors
     coverage run --source=cryptography/,tests/ -m pytest --capture=no --strict {posargs}
     coverage report -m
 
@@ -36,7 +36,6 @@ commands =
 # coverage.py on pypy.
 [testenv:pypy]
 commands =
-    pip install -e vectors
     py.test --capture=no --strict {posargs}
 
 [testenv:pep8]
